Fix bug with overflow with h4 elements

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,7 +10,8 @@
 p,
 h1,
 h2,
-h3 {
+h3,
+h4 {
   word-break: break-all;
 }
 
